--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
+    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 2}"
    ]
   },
   {
@@ -85,9 +85,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "friends"
    ]
