--- a/index.ipynb
+++ b/index.ipynb
@@ -67,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': \n",
+    "friends = {'name': 'Friends', 'genre': 'sitcom', 'no_of_seasons': 10\n",
     "          }"
    ]
   },
@@ -106,16 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "10"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
