Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -344,10 +344,10 @@
        " 'genre': 'sitcom',\n",
        " 'no_of_seasons': 10,\n",
        " 'no_of_episodes': 236,\n",
-       " 'creators': ['David Crane', 'Marta Kauffman']}"
+       " 14: 'some value'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
